css/style.css
@import url("https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@400;600&family=Shrikhand&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");

:root {
  --yellow: #ffd15b;
  --grey: #7a7a7a;
  --light-grey: #c6c6c6;
  --black: #1b1b1b;
  --anton: "Anton", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
    sans-serif;
  --manrope: "Manrope", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
    sans-serif;
}

body {
  background-color: #ededed;
}

header {
  height: 670px;
  width: 100%;
  background: center / cover no-repeat url("../assets/header.jpg");
  text-align: center;
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

header h1 {
  color: var(--yellow);
  font-family: var(--anton);
  font-weight: 400;
  font-size: 44px;
  line-height: 66.24px;
  max-width: 890px;
  text-wrap: wrap;
  margin-bottom: 40px;
}

header a {
  position: absolute;
  top: 50px;
  left: 60px;
  width: 207px;
  height: 25.26px;
}

header a img {
  width: 100%;
  height: 100%;
}

header .searchbar {
  background-color: #fff;
  width: clamp(450px, 60%, 950px);
  height: 72px;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
header .searchbar input {
  width: calc(100% - 52px);
  border: none;
  height: 100%;
  outline: none;
  font-family: var(--manrope);
  line-height: 21.86px;
  font-size: 16px;
  font-weight: 400;
}

header .searchbar .search-btn {
  background: center / cover no-repeat url("../assets/search-btn.png");
  height: 52px;
  width: 52px;
  outline: none;
  border: none;
  transition: background 0.1s;
}

header .searchbar .search-btn:hover {
  background: center / cover no-repeat url("../assets/search-btn-clicked.png");
}

main {
  padding: 0 40px;
}

.cards {
  display: grid;
  grid-template-columns: repeat(auto-fill, 380px);
  justify-content: space-between;
  row-gap: 30px;
}

.card {
  height: 730px;
  width: 380px;
  box-shadow: 0 4px 34px 30px #0000000a;
}

.card-body {
  padding-left: 25px;
  padding-right: 25px;
}

.card-img-top {
  height: 250px;
  object-fit: cover;
}

.time {
  position: absolute;
  background-color: var(--yellow);
  padding: 5px 15px;
  top: 20px;
  right: 20px;
  font-family: var(--manrope);
  font-weight: 400;
  font-size: 12px;
  line-height: 16.39px;
}

.card .card-title {
  font-family: var(--anton);
  font-weight: 400;
  font-size: 18px;
  margin: 14px 0 30px;
}

.card .card-body h6 {
  font-family: var(--manrope);
  font-weight: 700;
  font-size: 12px;
  letter-spacing: 0.9px;
  text-transform: uppercase;
  color: var(--grey);
  margin-bottom: 10px;
}

.card .card-body .card-recipe {
  height: 105px;
  font-family: var(--manrope);
  font-weight: 400;
  font-size: 14px;
  overflow: hidden;
  margin-bottom: 30px;
}

.card-body .card-ingredients .col {
  margin-bottom: 30px;
}

.card-body .card-ingredients .col p {
  margin: 0;
}

.card-body .card-ingredients .col p:first-of-type {
  color: var(--black);
  font-family: var(--manrope);
  font-weight: 500;
  font-size: 14px;
  line-height: 19px;
}

.card-body .card-ingredients .col p:last-of-type {
  color: var(--grey);
  font-family: var(--manrope);
  font-weight: 500;
  font-size: 14px;
  line-height: 19px;
}

.more {
  margin: 30px calc((100% - 100px) / 2);
  width: 100px;
}

.tags {
  display: flex;
  margin: 30px 0;
  flex-wrap: wrap;
  gap: 30px;
}

.tag {
  display: flex;
  background-color: var(--yellow);
  padding: 5px 15px;
  height: 50px;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
}

.tag p {
  font-family: var(--manrope);
  font-weight: 400;
  font-size: 14px;
  line-height: 19.12px;
  margin: 0;
}
.tag button {
  width: 20px;
  height: 20px;
  background: center / cover no-repeat url("../assets/close.svg");
  outline: none;
  border: none;
}

.tag button:hover {
  background: center / cover no-repeat url("../assets/close_hover.svg");
}

.search {
  min-height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin-top: 30px;
}

.search .recipes_count {
  font-family: var(--anton);
  font-weight: 400;
  font-size: 21px;
  line-height: 31.61px;
}

.hidden {
  display: none;
}

main {
  padding-bottom: 30px;
}

.filter {
  background-color: #fff;
  width: 195px;
  height: 56px;
  overflow: hidden;
}

.filter.expand {
  height: fit-content;
  max-height: 315px;
}

.filter .head {
  padding: 16px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  user-select: none;
}

.filter .arrow {
  background: center / cover no-repeat url("../assets/filter_arrow_down.svg");
  height: 6px;
  width: 13px;
}

.filter.expand .arrow {
  background: center / cover no-repeat url("../assets/filter_arrow_up.svg");
}

.filter .title {
  font-family: var(--manrope);
  font-weight: 500;
  font-size: 16px;
  line-height: 21.86px;
  margin: 0;
}

.filter-body form {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: calc(100% - 32px);
  height: 36px;
  border: 1px solid var(--light-grey);
  border-radius: 2px;
  padding: 3.5px;
  margin: 0 16px 16px;
}

.filter-body form input {
  width: calc(100% - 20px);
  outline: none;
  border: none;
  font-family: var(--manrope);
  font-weight: 400;
  font-size: 14px;
  line-height: 19.12px;
  color: var(--grey);
  caret-color: var(--grey);
}

.filter-body form button {
  border: none;
  outline: none;
  background: center / cover no-repeat url("../assets/filter_search_btn.svg");
  width: 15px;
  height: 15px;
}

.filter-list {
  max-height: 225px;
  overflow: scroll;
}

.filter-list::-webkit-scrollbar {
  width: 5px;
}
.filter-list::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px var(--light-grey);
  border-radius: 5px;
}
.filter-list::-webkit-scrollbar-thumb {
  background: var(--grey);
  border-radius: 5px;
}

.filter-list .item {
  height: 40px;
  margin: 0;
  line-height: 40px;
  padding: 0 16px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.filter-list .item:hover {
  background-color: var(--yellow);
  cursor: pointer;
}

.search_filters {
  display: flex;
  justify-content: space-between;
  width: clamp(calc(195px * 3 + 10px), 80%, 700px);
}

